fix unclickable space between items and alignment, fixes #8883

--- a/resources/assets/stylesheets/less/actionmenu.less
+++ b/resources/assets/stylesheets/less/actionmenu.less
@@ -58,11 +58,12 @@
 
     .action-menu-item {
         line-height: 1;
-        padding: 3px 0;
+        padding: 0;
 
-        a {
+        > a,
+        > label {
             margin: 0;
-            padding: 0;
+            padding: 3px 0;
             display: block;
 
             &[disabled] {
@@ -76,7 +77,7 @@
         input[type="image"] {
             display: inline-block;
             margin: 0 0.25em;
-            vertical-align: bottom;
+            vertical-align: middle;
 
             width: @icon-size;
             height: @icon-size;
